2008-12-19  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* docs/notes-upgrade.txt: Added information.

2008-12-19  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* docs/notes-upgrade.txt: Notes to upgrade after introduced
	changes by r1226.

2008-12-19  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* people/models.py: Added missing copyright and new methods for
	the committer.	
	* teams/models.py: Tips to keep the current performance.
	* teams/views.py:
	* templates/teams/team_base.html:
	* templates/teams/team_list.html: A coordinator is a usual team
	member with a different role.

2008-12-19  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* README: Bump requirement to Python 2.4

2008-12-19  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* docs/DataModel.odg: Updated data model documentation.

2008-12-19  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* stats/views.py: Removed useless ugettext_lazy import.

2008-12-15  Claude Paroz  <claude@2xlibre.net>

	* people/models.py: Use username (slug) instead of id for get_absolute_url.
	* people/urls.py: Rename one of the two 'person' url pattern so as to be
	unique.

2008-12-15  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* teams/models.py: Fix typo commiter -> committer.
	
2008-12-15  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* languages/views.py: Just a \n!
	* people/models.py: Added is_committer, is_reviewer and
	is_translator methods.	
	* people/urls.py: Add a FIXME
	* stats/views.py: Removed profiler loading (time_spent not called)
	* teams/models.py:
	* teams/views.py: Fix typo commiter -> committer
	* templates/module_list.html: Removed spaces

2008-12-13  Claude Paroz  <claude@2xlibre.net>

	* common/views.py: Add site_register and activate_account views to support
	registration.
	* media/css/main.css: Add help and errorlist classes for forms display.
	* people/forms.py: New RegistrationForm class.